--- a/.env.development
+++ b/.env.development
@@ -5,13 +5,17 @@ NEXT_PUBLIC_URL=http://localhost
 NEXT_PUBLIC_USE_EMULATOR=false
 
 # Firebase
-NEXT_PUBLIC_API_KEY=YOUR_FIREBASE_API_KEY
-NEXT_PUBLIC_AUTH_DOMAIN=YOUR_FIREBASE_AUTH_DOMAIN
-NEXT_PUBLIC_PROJECT_ID=YOUR_FIREBASE_PROJECT_ID
-NEXT_PUBLIC_STORAGE_BUCKET=YOUR_FIREBASE_STORAGE_BUCKET
-NEXT_PUBLIC_MESSAGING_SENDER_ID=YOUR_FIREBASE_MESSAGING_SENDER_ID
-NEXT_PUBLIC_APP_ID=YOUR_FIREBASE_APP_ID
-NEXT_PUBLIC_MEASUREMENT_ID=YOUR_FIREBASE_MEASUREMENT_ID
+NEXT_PUBLIC_API_KEY=AIzaSyC7D4ZZc1YQlttx4q1HwOwPATx5r2dcv9E
+NEXT_PUBLIC_AUTH_DOMAIN=twitter-clone-soless-cho-acbf9.firebaseapp.com
+NEXT_PUBLIC_PROJECT_ID=twitter-clone-soless-cho-acbf9
+NEXT_PUBLIC_STORAGE_BUCKET=twitter-clone-soless-cho-acbf9.appspot.com
+NEXT_PUBLIC_MESSAGING_SENDER_ID=638891329823
+NEXT_PUBLIC_APP_ID=1:638891329823:web:409ad2356986851647882a
+NEXT_PUBLIC_MEASUREMENT_ID=G-F2CYGFN24L
 
 # Twitter 
 TWITTER_BEARER_TOKEN=YOUR_TWITTER_BEARER_TOKEN
+
+# MONGODB
+NEXT_PUBLIC_MONGODB_URI=MONGO_URI
+NEXT_PUBLIC_SECRET_KEY=SECRET_KEY
