--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
+    "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
     "firebase": "^9.9.4",
     "framer-motion": "^7.2.1",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0",
     "next": "^12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
