--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -63,12 +63,8 @@
         ]
       }
     ],
-    "@typescript-eslint/no-misused-promises": [
-      "false",
-      {
-        "checksVoidReturn": { "attributes": true }
-      }
-    ],
+    "@typescript-eslint/no-misused-promises":
+      "warn",
     "@typescript-eslint/consistent-type-imports": "warn",
     "@typescript-eslint/prefer-nullish-coalescing": "warn",
     "@typescript-eslint/explicit-function-return-type": "warn"
